@@ -1,4 +1,5 @@
 - Refactor: Remove deprecated relation between execution degree and campus
+- New Feature: Add conclusion number to conclusionProcess and conclusionProcessVersion
 
 40.5.1 (06-02-2023)
 - Improvement: Revert description of 'Not Approved' enrolment state 
